fix clipped content in accordion children

--- a/web/src/components/display/Accordion.module.scss
+++ b/web/src/components/display/Accordion.module.scss
@@ -46,3 +46,11 @@
     transform: translateY(0);
   }
 }
+
+.animating::details-content {
+  overflow: clip;
+}
+
+.accordion[open]::details-content {
+  overflow: visible;
+}
